# CubeMot

./: .clang-format  .clang-format-ignore  .gitignore  CMakeLists.txt  Dockerfile  Kconfig  README.adoc  arch.adoc
.codebuddy/hooks/: clang-format.json
.codebuddy/rules/: documentation-format.mdc  verify-after-changes.mdc
.github/workflows/: code-format-check.yml  docs-link-check.yml  docs-validation.yml  gcc-build-verification.yml  static-analysis.yml  unit-tests.yml
application/: CMakeLists.txt  main.c
boards/: CMakeLists.txt  Kconfig  led.h
boards/nucleo_g431rb/: CMakeLists.txt  board_config.cmake  defconfig
boards/nucleo_g431rb/stm32cubemx_generated/Core/Inc/: stm32g4xx_it.h
boards/nucleo_g431rb/stm32cubemx_generated/Core/Src/: main.c  stm32g4xx_hal_timebase_tim.c
cmake/: board_config.cmake  gcc_arm_none_eabi_toolchain.cmake  kconfig.cmake  post_build.cmake  starm_clang_toolchain.cmake
core_system/: CMakeLists.txt
docs/: BUILDING.adoc  debugging-nucleo-g431rb.adoc  kconfig.adoc  unit_testing.adoc
drivers/: CMakeLists.txt  Kconfig
drivers/led/: led.c  led.h
middlewares/: CMakeLists.txt  Kconfig
src/: CMakeLists.txt
src/application/: CMakeLists.txt  Kconfig
src/boards/: Kconfig
src/boards/include/boards/: led.h
src/boards/nucleo_g431rb/: Kconfig  board_config.cmake  led.c  openocd.cfg
src/boards/nucleo_g431rb/stm32cubemx_generated/: .gitignore  stm32cubemx_generated.ioc
src/boards/nucleo_g431rb/stm32cubemx_generated/Core/Inc/: main.h
src/boards/nucleo_g431rb/stm32cubemx_generated/Core/Src/: stm32g4xx_it.c
src/drivers/: CMakeLists.txt
src/drivers/include/drivers/led/: led.h
src/drivers/led/: led.c
tests/: CMakeLists.txt
tests/drivers/: test_led.cpp
tests/mocks/: CMakeLists.txt  board_led_mock.cpp  board_led_mock.h
tools/: after_code_generation.py  gen_config.py  gen_multiconfig.py  requirements.txt  setup_cubemot_env.sh  validate_openocd.sh
tools/git-hooks/: pre-commit
tools/stlink_wsl_usbip_tools/: stlink_wsl_usbip_manager.ps1  stlink_wsl_usbip_tools.adoc  stlink_wsl_usbip_validator.sh
